PyMaker/datas/object2/RawHTML/i9101/Python_DOC_referPages.error-using-argv-while-running-python-in-terminal.txt
<div class="post-text" itemprop="text">
<p>I use argv to pass in unique arguments to python scripts while in terminal. Very useful when running same program on multiple unique files (this program parses an xml file for certain things). I have built three different programs that serve unique purposes.</p>
<p>I am aggregating my programs to one .py file so that I can use 'import' within the actual running instance of python and then go one by one through the files:</p>
<pre><code>&gt;&gt;&gt;import xml
&gt;&gt;&gt;xml.a()
&gt;&gt;&gt;xml.b()
&gt;&gt;&gt;xml.c()
</code></pre>
<p>How can I pass arguments to these programs on the fly? I'm getting a syntax error when I place the arguments after calling the program in this way.</p>
<pre><code>&gt;&gt;&gt;xml.a() file1.xml file1.csv
           ^
&gt;&gt;&gt;SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You pass arguments to functions in Python by placing them between the parentheses (these are called "parameters," <a href="https://docs.python.org/3.6/tutorial/controlflow.html#defining-functions" rel="nofollow noreferrer">see documentation</a>). So you'll need to modify your functions so that they can take arguments (rather than read from <code>sys.argv</code>), and then run the function like:</p>
<p><strong>my_library.py</strong></p>
<pre><code>def function1(filename):
    print filename
</code></pre>
<p><strong>Interpreter</strong></p>
<pre><code>&gt;&gt;&gt; import my_library
&gt;&gt;&gt; my_library.function1("file1.xml")
&gt;&gt;&gt; file1.xml
</code></pre>
<p>If you want your function be able to process an indefinite number of arguments (as you can with <code>sys.argv</code>), you can use the <code>*</code> syntax at the end of your arguments list to catch the remaining parameters as a list (<a href="https://docs.python.org/3/tutorial/controlflow.html#arbitrary-argument-lists" rel="nofollow noreferrer">see documentation</a>). For example:</p>
<p><strong>my_library.py</strong></p>
<pre><code>def function1(*filenames):
    for filename in filenames:
        print filename
</code></pre>
<p><strong>Interpreter</strong></p>
<pre><code>&gt;&gt;&gt; import my_library
&gt;&gt;&gt; my_library.function1("file1.xml", "file2.csv", "file3.xml")
file1.xml
file2.csv
file3.xml
</code></pre>
</div>
<span class="comment-copy">you cannot have a function called <code>1</code>... and <code>sys.argv</code> is for programs run outside the python interpreter. In the interpreter, there are only parameters.</span>
<span class="comment-copy">Thanks. Changed function names. Only used 1,2,3 for brevity.</span>
<span class="comment-copy">Thank you. I'll read the documentation.</span>
